2017-03-28  JMB  Fix image selector/editor on Android

    The image selection/editing dialog hadn't been properly tested on
    Android yet; made a couple of fixes to make it work correctly.

2017-03-27  JMB  More reliable column resizing

    At least on Android, setting the width of a column from the column
    statistics dialog triggered a cascade of events which could sometimes
    inadvertently change the widths of other columns also.  Disabled a signal
    hander while applying changes from the dialog to prevent this from
    happening.

2017-03-24  JMB  Better slideshow mode

    Switched over slideshows to use the image viewer dialog which was
    just refactored.

2017-03-22  JMB  Better image fullscreen mode

    PortaBase was still using a hack for fullscreen image display that
    predated the addition of proper fullscreen support in Qt, and at
    least with Qt 5 it sometimes resulted in odd failures to return to
    normal display mode.  Switched over to the same approach used for
    the main window's fullscreen mode.

2017-03-20  JMB  Removed image resolution limit

    All of PortaBase's supported platforms now have much more RAM than
    the original Sharp Zaurus (and Qt has gotten better about downscaling
    PNG images while loading), so the 800x600 resolution cap no longer
    makes sense.  The limit has been removed; images smaller than the
    screen resolution are shown at their actual size, and larger ones are
    scaled down to fit on the screen.  This means, for example, that digital
    photos can now be stored in a PortaBase file and (if the file wasn't
    explicitly altered in the image editor when selecting it) exported out
    again with no quality loss and all metadata intact.  Note, however,
    that Metakit's 1 GB file size limit significantly constrains the
    number of high-resolution photos you can fit in a single PortaBase file.

2017-03-19  JMB  More recent files remembered
